# ignition

./: Cargo.toml  LICENCE  README.md
src/: colors.rs  config.rs  fonts.rs  main.rs  search.rs  shortcuts.rs
src/apps/: mod.rs
src/apps/icons/: finder.rs  loader.rs  mod.rs
src/icons/: finder.rs  mod.rs
src/search/: mod.rs
src/ui/: mod.rs  results.rs  search_bar.rs
src/ui/framework/: fonts.rs  icons.rs  mod.rs
